--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
+<html>
+<head>
+  <title>Pancake Store</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
   <div class="container">
 <!--Start of row--> 
   <header class="row">
@@ -193,3 +202,6 @@
 
   <!--End of container div--> 
 </div>
+
+</body>
+</html>
